[package]
name = "scalar-tss"
version = "0.0.0"
license = "Apache-2.0 OR MIT"
authors = [ "Vu Viet Tai <tai@codelight.com>" ]
description = "a peer-to-peer networking library"
edition = "2021"

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
#anemo = { path = "../anemo" }
#anemo-cli = { path = "../anemo-cli" }
#anemo-tower = { path = "../anemo-tower" }
anemo.workspace = true
anemo-cli.workspace = true
anemo-tower.workspace = true
narwhal-network.workspace = true

anyhow = "1.0"
bincode = "1.3.3"
bytes = { version = "1.1.0", features = ["serde"] }
prost = "0.11.8"
prost-types = { version = "0.11", optional = true }
tokio = { version = "1.20.1", features = ["full"] }
tonic = "0.9.2"
tower = { version = "0.4.12", default-features = false, features = ["full"] }
futures = "0.3.21"
rand = "0.8.5"
ron = "0.8.0"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[build-dependencies]
#anemo-build = { path = "../anemo-build" }
anemo-build.workspace = true
tonic-build = "0.9.2"
