[package]
name = "core"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = "0.4.25"
envconfig = "0.10.0"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
hex = "0.4.3"
isatty = "0.1.9"
lazy_static = "1.2.0"
prometheus = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
reqwest = { version = "0.11.14", features = ["json", "stream", "multipart"] }
semver = { version = "1.0.16", features = ["serde"] }
serde = { version = "1.0.126", features = ["rc"] }
serde_derive = "1.0.125"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_regex = "1.1.0"
serde_yaml = "0.9.21"
slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
slog-async = "2.5.0"
slog-envlogger = "2.1.0"
slog-term = "2.7.0"
stable-hash_legacy = { version = "0.3.3", package = "stable-hash" }
stable-hash = { version = "0.4.2" }
tokio = { workspace = true }
toml = "0.7.5"
tonic = { workspace = true }
web3 = "0.19.0"
[build-dependencies]
tonic-build = { workspace = true }