[package]
name = "scalar-tss-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anemo = { workspace = true }
anyhow = "1.0.56"
futures = "0.3.21"
futures-util = "0.3"
async-channel = "1.6.1"
tokio.workspace = true
#tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
async-std = { version = "1.10.0", features = ["attributes", "tokio1"] }
#libp2p = "0.52.0"
prometheus = { workspace = true }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"
serde_ipld_dagcbor = "0.1.2"
round-based = { version = "0.1.4" }
#multi-party-ecdsa = {git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
#curv-kzen = "0.9"
pretty_env_logger = "0.5.0"
tracing = { workspace = true }
twox-hash = "1.6"
blake2 = "0.10"
async-trait = "0.1.53"
unsigned-varint = { version = "0.6.0"}

eyre.workspace = true
narwhal-config.workspace = true
narwhal-crypto.workspace = true
narwhal-network.workspace = true
narwhal-node.workspace = true
narwhal-storage.workspace = true
narwhal-types.workspace = true
narwhal-worker.workspace = true
sui-keys.workspace = true
sui-types.workspace = true
sui-protocol-config.workspace = true

mysten-metrics.workspace = true
mysten-network.workspace = true

#mpc-p2p = { path = "../node/network" }
#mpc-runtime = { path = "../node/runtime" }

[dev-dependencies]
round-based = { version = "0.1.4", features = ["dev"] }
