[package]
name = "scalar-chain-ethereum"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
hex-literal = "0.4.1"
core = { path = "../../core" }
envconfig = "0.10.0"
#futures = "0.1.21"
#http = "0.2.4"
jsonrpc-core = "18.0.0"
#graph = { path = "../../graph" }
lazy_static = "1.2.0"
serde = "1.0"
slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
prost = { workspace = true }
prost-build = { workspace = true }
prost-types = { workspace = true }
#dirs-next = "2.0"

#ethabi = "17.2"
#tiny-keccak = "1.5.0"
hex = "0.4.3"
#semver = "1.0.16"

#itertools = "0.11.0"
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

web3 = "0.19.0"
[dev-dependencies]
base64 = "0.20.0"
uuid = { version = "1.3.4", features = ["v4"] }

[build-dependencies]
tonic-build = { workspace = true }

[[example]]
name = "firehose"
[[example]]
name = "listener"