[package]
name = "scalar-chain-ethereum"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = "1.0"
core = { path = "../../core" }
dirs-next = "2.0"
envconfig = "0.10.0"
ethers = { version = "2.0", features = ["abigen", "ipc", "rustls", "ws"]}
eyre = "0.6"
futures = "0.1.21"
hex = "0.4.3"
hex-literal = "0.4.1"
http = "0.2.4"
jsonrpc-core = "18.0.0"
lazy_static = "1.2.0"
serde = "1.0"
prost = "0.11.9"
prost-types = "0.11.9"
#prost = { workspace = true }
#prost-types = { workspace = true }
tiny-keccak = "1.5.0"
rayon = "1.7.0"
semver = "1.0.16"
itertools = "0.11.0"
#graph-runtime-wasm = { path = "../../runtime/wasm" }
#graph-runtime-derive = { path = "../../runtime/derive" }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

narwhal-config.workspace = true
narwhal-crypto.workspace = true
narwhal-executor.workspace = true
narwhal-node.workspace = true
narwhal-types.workspace = true
narwhal-worker.workspace = true
sui-protocol-config.workspace = true
[dev-dependencies]
base64 = "0.20.0"
uuid = { version = "1.3.4", features = ["v4"] }

[build-dependencies]
tonic-build = { workspace = true }

#[[example]]
#name = "listener"

[[example]]
name = "wsclient"
