[package]
name = "scalar-chain-ethereum"
version.workspace = true
edition = "2021"

[dependencies]
anemo = { workspace = true }
anyhow = "1.0"
arc-swap.workspace = true
core = { path = "../../core" }
dirs-next = "2.0"
envconfig = "0.10.0"
ethers = { version = "2.0", features = ["abigen", "ipc", "rustls", "ws"]}
eyre = "0.6"
fastcrypto =  {workspace = true}
futures = {workspace = true}
h2 = { version = "0.3", optional = false }
hex = "0.4.3"
hex-literal = "0.4.1"
http = "0.2.4"
jsonrpc-core = "18.0.0"
lazy_static = "1.2.0"
mysten-metrics = { workspace = true }
mysten-network.workspace = true
serde = "1.0"
prost = "0.11.9"
prost-types = "0.11.9"
prometheus = { workspace = true }
#prost = { workspace = true }
#prost-types = { workspace = true }
tiny-keccak = "1.5.0"
rayon = "1.7.0"
semver = "1.0.16"
itertools = "0.11.0"
#graph-runtime-wasm = { path = "../../runtime/wasm" }
#graph-runtime-derive = { path = "../../runtime/derive" }
tokio = { workspace = true }
toml = "0.4"
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

narwhal-config.workspace = true
narwhal-crypto.workspace = true
narwhal-executor.workspace = true
narwhal-node.workspace = true
narwhal-network.workspace = true
narwhal-types.workspace = true
narwhal-worker.workspace = true
sui-protocol-config.workspace = true
[dev-dependencies]
base64 = "0.20.0"
uuid = { version = "1.3.4", features = ["v4"] }

[build-dependencies]
tonic-build = { workspace = true }

#[[example]]
#name = "listener"

[[example]]
name = "wsclient"
